fix custom cursor not showing up when deployed

--- a/src/components/BitDisplay/BitDisplay.module.scss
+++ b/src/components/BitDisplay/BitDisplay.module.scss
@@ -1,5 +1,3 @@
-@import "../../variables";
-
 .bitDisplay {
   display: flex;
   align-items: center;
@@ -21,7 +19,7 @@
 
 .editable {
   .bitContainer {
-    cursor: $cursorClick, pointer;
+    cursor: url("../../assets/cursor-click.png") 14 0, pointer;
   }
 }
 
