--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,5 +1,3 @@
-@import "../../variables";
-
 $button-border-color: #ccc;
 
 @function makeBorderShadow($color, $size, $inverse: false) {
@@ -17,7 +15,6 @@ $button-border-color: #ccc;
   font-size: 1em;
   box-shadow: makeBorderShadow(#777, 0.2em);
   outline: none;
-  cursor: $cursorClick, pointer;
 
   &:hover {
     background-color: #ddd;
