--- a/src/components/CheckBox/CheckBox.module.scss
+++ b/src/components/CheckBox/CheckBox.module.scss
@@ -1,5 +1,3 @@
-@import "../../variables";
-
 @function makeBorderShadow($color, $size, $inverse: false) {
   @return #{$size} 0 #{$color}, #{-$size} 0 #{$color}, 0 #{$size} #{$color},
     0 #{-$size} #{$color},
@@ -14,7 +12,6 @@
   margin: 0 0.5em;
   display: inline-block;
   position: relative;
-  cursor: $cursorClick, pointer;
 }
 
 .checkBoxMark {
